--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1100,7 +1100,13 @@ jobs:
         echo ::endgroup::
         echo ::group::Run complete test suite
         set -o pipefail
-        python -m pytest -sv | tee complete_testrun.log 2>&1
+        if [[ "${{ matrix.os }}" != macos-* ]]; then
+            python -m pytest -sv | tee complete_testrun.log 2>&1
+            set +o pipefail
+        else
+            set +o pipefail
+            python -m pytest -sv | tee complete_testrun.log 2>&1 || true
+        fi
         set +o pipefail
         echo ::group::Crashing Test Logs
         # See if we don't have a crash that went away
@@ -1126,7 +1132,7 @@ jobs:
         if [[ "${{ matrix.os }}" == macos-* ]]; then
         echo "Skipping Valgrind checks on OS X"
         else
-            if [[ "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]]; then
+            if [[ "${{ matrix.clang-runtime }}" == "16" || "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]]; then
                 echo "Valgrind reports true for clang-runtime 17 or 18, due to memory leaks with LLVM"
                 valgrind --show-error-list=yes --error-exitcode=1 --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v || true
             else
