--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -814,7 +814,9 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
-        sudo apt-get install git g++ debhelper devscripts gnupg python3 valgrind
+        sudo apt-get install git g++ debhelper devscripts gnupg python3
+        sudo apt-get install -y libc6-dbg
+        sudo snap install valgrind --classic
         sudo apt autoremove
         sudo apt clean
         # Install libraries used by the cppyy test suite
@@ -1132,7 +1134,7 @@ jobs:
         if [[ "${{ matrix.os }}" == macos-* ]]; then
         echo "Skipping Valgrind checks on OS X"
         else
-            if [[ "${{ matrix.clang-runtime }}" == "16" || "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]]; then
+            if [[ "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]]; then
                 echo "Valgrind reports true for clang-runtime 17 or 18, due to memory leaks with LLVM"
                 valgrind --show-error-list=yes --error-exitcode=1 --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v || true
             else
