--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -822,11 +822,12 @@ jobs:
           cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    \
                 -DUSE_CLING=OFF                             \
                 -DUSE_REPL=ON                               \
-                -DLLVM_DIR=$LLVM_BUILD_DIR/lib/cmake/llvm       \
-                -DClang_DIR=$LLVM_BUILD_DIR/lib/cmake/clang     \
+                -DLLVM_DIR=$LLVM_BUILD_DIR/lib/cmake/llvm   \
+                -DClang_DIR=$LLVM_BUILD_DIR/lib/cmake/clang \
                 -DBUILD_SHARED_LIBS=ON                      \
                 -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}    \
                 -DCMAKE_INSTALL_PREFIX=$CPPINTEROP_DIR      \
+                -DTEST_INTEROP_CUDA=0                       \
                 ../
         fi
         os="${{ matrix.os }}"
