--- a/.github/workflows/clang-tidy-review.yml
+++ b/.github/workflows/clang-tidy-review.yml
@@ -35,6 +35,7 @@ jobs:
           apt_packages: libxml2,libxml2-dev,libtinfo-dev,zlib1g-dev,libzstd-dev
           split_workflow: true
           cmake_command: >
+            python -m ensurepip --upgrade &&
             pip install cmake lit &&
             cmake --version &&
             cmake . -B build -DCMAKE_BUILD_TYPE="Release"
