--- a/environment-wasm.yml
+++ b/environment-wasm.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - zlib
   - nlohmann_json
-  - xeus-lite
+  - xeus-lite <2.0
   - xeus >=3.0.5,<4.0
   - xtl >=0.7,<0.8
   - cpp-argparse
