--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
             cling: On
             cling-version: '1.0'
             cppyy: On
-
+    steps:
     - name: Set up Python 
       uses: actions/setup-python@v5
       with:
