--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -294,6 +294,8 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
+        sudo apt-get install -y libc6-dbg
+        sudo snap install valgrind --classic
         sudo apt-get autoremove
         sudo apt-get clean
 
