--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -294,8 +294,7 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
-        sudo apt-get install -y libc6-dbg
-        sudo snap install valgrind --classic
+        sudo apt-get install valgrind
         sudo apt-get autoremove
         sudo apt-get clean
 
@@ -746,7 +745,7 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
-        sudo apt-get install git g++ debhelper devscripts gnupg python3 valgrind
+        sudo apt-get install git g++ debhelper devscripts gnupg python3
         sudo apt-get install -y libc6-dbg
         sudo snap install valgrind --classic
         sudo apt autoremove
