--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -294,6 +294,7 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
+        sudo apt-get install valgrind
         sudo apt-get autoremove
         sudo apt-get clean
 
