Fix wasm build ci

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -328,10 +328,11 @@ include_directories(BEFORE SYSTEM
 string(REPLACE "-Wcovered-switch-default" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 file(STRINGS "VERSION" CPPINTEROP_VERSION)
-string(REGEX MATCH "([0-9]*)\.([0-9]*)\.([0-9]*)" CPPINTEROP_VERSION_ONLY "${CPPINTEROP_VERSION}")
-set(CPPINTEROP_VERSION_MAJOR "${CMAKE_MATCH_1}")
-set(CPPINTEROP_VERSION_MINOR "${CMAKE_MATCH_2}")
-set(CPPINTEROP_VERSION_PATCH "${CMAKE_MATCH_3}")
+string(REPLACE "." ";" VERSION_LIST "${CPPINTEROP_VERSION}")
+message(Debug "${VERSION_LIST}")
+list(GET VERSION_LIST 0 CPPINTEROP_VERSION_MAJOR)
+list(GET VERSION_LIST 1 CPPINTEROP_VERSION_MINOR)
+list(GET VERSION_LIST 2 CPPINTEROP_VERSION_PATCH)
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CppInterOp/CppInterOpConfig.cmake.in
