--- a/cmake/CppInterOp/CppInterOpConfigVersion.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfigVersion.cmake.in
@@ -1,12 +1,9 @@
 set(PACKAGE_VERSION "@CPPINTEROP_VERSION@")
 
-# LLVM is API-compatible only with matching major.minor versions
-# and patch versions not less than that requested.
-
-if("@CPPINTEROP_VERSION_MAJOR@.@CPPINTEROP_VERSION_MINOR@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}"
+if("${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}" VERSION_LESS "@CPPINTEROP_VERSION_MAJOR@.@CPPINTEROP_VERSION_MINOR@"
    AND NOT "@CPPINTEROP_VERSION_PATCH@" VERSION_LESS "${PACKAGE_FIND_VERSION_PATCH}")
   set(PACKAGE_VERSION_COMPATIBLE 1)
-  if("@CPPINTEROP_VERSION_PATCH@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_PATCH}")
+endif()
+if("@CPPINTEROP_VERSION_MAJOR@.@CPPINTEROP_VERSION_MINOR@.@CPPINTEROP_VERSION_PATCH@" VERSION_EQUAL "${PACKAGE_FIND_VERSION_MAJOR}.${PACKAGE_FIND_VERSION_MINOR}.${PACKAGE_FIND_VERSION_PATCH}")
     set(PACKAGE_VERSION_EXACT 1)
-  endif()
 endif()
